# kernel_devices_google_shusky

./: .gitignore  BUILD.bazel  build.config.shusky  build.config.shusky.gki.fragment  build_shusky.sh  device.bazelrc  shusky_gki.fragment  shusky_modified_gki.fragment  vendor_boot_modules.shusky  vendor_kernel_boot_modules.shusky
display/: BUILD.bazel  Kbuild  Makefile  panel-google-bigsurf.c  panel-google-hk3.c  panel-google-shoreline.c
dts/: Makefile  zuma-husky-common.dtsi  zuma-husky-display.dtsi  zuma-husky-proto1.dts  zuma-husky-proto1_1.dts  zuma-shusky-battery.dtsi  zuma-shusky-charging.dtsi
dts/google/: Makefile  zuma-board-bluetooth.dtsi  zuma-board-cp-s5300-sit.dtsi  zuma-board-ese.dtsi  zuma-board-gps.dtsi  zuma-board-pcie.dtsi  zuma-board-udfps.dtsi  zuma-board-wlan.dtsi  zuma-board.dtsi  zuma-husky-audio.dtsi  zuma-husky-battery-data.dtsi  zuma-husky-battery.dtsi  zuma-husky-camera.dtsi  zuma-husky-charging.dtsi  zuma-husky-common.dtsi  zuma-husky-display.dtsi  zuma-husky-dvt1.dts  zuma-husky-evt1.dts  zuma-husky-evt1_1.dts  zuma-husky-mp.dts  zuma-husky-pmic.dtsi  zuma-husky-proto1-wingboard.dts  zuma-husky-proto1.dts  zuma-husky-proto1_1.dts  zuma-husky-pvt1.dts  zuma-husky-touch.dtsi  zuma-husky-wcharger.dtsi  zuma-ripcurrent-audio.dtsi  zuma-ripcurrent-battery-data.dtsi  zuma-ripcurrent-battery.dtsi  zuma-ripcurrent-bcl.dtsi  zuma-ripcurrent-camera.dtsi  zuma-ripcurrent-charging.dtsi  zuma-ripcurrent-display.dtsi  zuma-ripcurrent-ese.dtsi  zuma-ripcurrent-haptics.dtsi  zuma-ripcurrent-nfc.dtsi  zuma-ripcurrent-pmic.dtsi  zuma-ripcurrent-sbbm.dtsi  zuma-ripcurrent-touch.dtsi  (+42 more)
