# SPDX-License-Identifier: GPL-2.0-or-later

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "drm_panel.google",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "Kbuild",
    ]) + [
        "//private/google-modules/display:headers",
        "//private/google-modules/display/include:headers",
        "//private/google-modules/soc/gs:gs_soc_headers",
    ],
    outs = [
        # keep sorted
        "panel-google-bigsurf.ko",
        "panel-google-hk3.ko",
        "panel-google-shoreline.ko",
    ],
    kernel_build = "//private/google-modules/soc/gs:gs_kernel_build",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/display:__pkg__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
    deps = [
        "//private/google-modules/display:display.samsung",
        "//private/google-modules/soc/gs:gs_soc_module",
    ],
)
